添加tool_encrypt